--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-.body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+body {
 }
 /* navigation */
 .nav {
